# genlab-1c-web

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.py
backend/: config.py  main.py
backend/auth/: __init__.py  dependencies.py  security.py
backend/database/: __init__.py  engine.py  models.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/routers/: auth.py  config.py  evaluations.py  experiments.py  generate.py  reports.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/chat/: ChatPanel.tsx
frontend/src/components/code/: CodeViewer.tsx  RunTabs.tsx  TaskHeader.tsx  index.ts
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  MainPanel.tsx  Sidebar.tsx  StatusBar.tsx  index.ts
frontend/src/components/score/: ScorePanel.tsx  index.ts
frontend/src/components/ui/: DifficultyBadge.tsx  QualityBadge.tsx
frontend/src/config/: constants.ts
frontend/src/pages/: DocumentationPage.tsx  EvaluationPage.tsx  ExpertsPage.tsx  LoginPage.tsx  PlaygroundPage.tsx  PromptsPage.tsx  QueuePage.tsx  SettingsPage.tsx  StatisticsPage.tsx  index.ts
frontend/src/store/: appStore.ts  authStore.ts  evaluationStore.ts
frontend/src/types/: index.ts  smop.ts
