[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "genlab-1c-web"
version = "1.0.0"
description = "Web platform for collaborative SMOP expert evaluation of AI-generated 1C:Enterprise code"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Danila Andreev", email = "ads4.nr@mail.ru" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "aiohttp>=3.9.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
]

[project.urls]
Repository = "https://github.com/4dand/genlab-1c-web"
"Core Engine" = "https://github.com/4dand/genlab-1c-core"
"Research Paper" = "https://github.com/4dand/1c-ai-codegen-research-paper"

[tool.ruff]
line-length = 100
target-version = "py311"
